<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <packaging>pom</packaging>
    <modules>
        <module>sk-base</module>
        <module>sk-example</module>
        <module>sk-spring-cloud-project</module>
    </modules>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.2.2.RELEASE</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>
    <groupId>com.sk</groupId>
    <artifactId>sk-spring-cloud-master</artifactId>
    <version>1.0.0.RELEASE</version>
    <name>sk-spring-cloud-master</name>
    <description>不想再重新搭建项目了</description>

    <properties>
        <java.version>11</java.version>
        <java.version>11</java.version>
        <spring-cloud.version>Hoxton.RC1</spring-cloud.version>
        <tk-mybatis.version>2.1.5</tk-mybatis.version>
        <mybatis.version>2.1.1</mybatis.version>
        <fasterxml-jackson.version>2.9.6</fasterxml-jackson.version>
        <pagehelper.version>1.2.13</pagehelper.version>
        <apache-commons.version>1.3.2</apache-commons.version>
        <fastdfs-client.version>1.26.2</fastdfs-client.version>
        <alibaba-fastjson.version>1.2.62</alibaba-fastjson.version>
        <apapche-commons-pool2.version>2.8.0</apapche-commons-pool2.version>
    </properties>

    <dependencies>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-actuator</artifactId>
        </dependency>

        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-thymeleaf</artifactId>
        </dependency>

        <dependency>
            <groupId>com.alibaba</groupId>
            <artifactId>fastjson</artifactId>
            <version>${alibaba-fastjson.version}</version>
        </dependency>

    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.5</version>
                <configuration>
                    <source>11</source>
                    <target>11</target>
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>
